# arge-consumption

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
.github/workflows/: code-quality.yml
arge-consumption/: client.py
arge-consumption/responses/: consumption.py  periods.py
arge_consumption/: __init__.py  client.py  errors.py  responses.py
