[tool.poetry]
name = "arge_consumption"
version = "1.0.2"
readme = "README.md"
description = "Python Client zum Abruf unterjähriger Verbrauchsinformationen über die *ARGE consumption-data API*."
authors = ["Moritz Duchêne <2857237+Debakel@users.noreply.github.com>"]
repository = "https://github.com/Debakel/arge-consumption"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
